2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Major overhaul of the fuse handling.
	* src/jtag.h: add device config parameters `fusemap' and
	`ocden_fuse'; add method jtagActivateOcdenFuse() to centralize the
	OCDEN fuse activation
	* src/devdescr.cc: add fusemap and ocden_fuse values
	* src/jtaggeneric.cc: implement jtagActivateOcdenFuse(), restrict
	jtagWriteFuses() to non-Xmega devices, make jtagDisplayFuses()
	display Xmega fuses correctly
	* src/jtagio.cc (initJtagOnChipDebugging): resort OCDEN activation
	to jtagActivateOcdenFuse()
	* src/jtag2io.cc (initJtagOnChipDebugging): (Dito.)

2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement PDI debugging for the JTAGICEmkII (and AVR Dragon) and
	Xmega devices.  This is basically the same as JTAG, except for the
	different ICE initialization.
	* src/jtag.h: add EMULATOR_MODE_PDI
	* src/jtag2.h: add an enum debugproto
	* src/jtag2io.cc: handle the `proto' field
	* src/jtag2rw.cc: (Dito.)
	* src/jtag2bp.cc: (Dito.)
	* src/jtag2run.cc: (Dito.)
	* src/jtag2prog.cc: (Dito.)
	* src/devdescr.cc (atxmega128a1_revd): fix is_xmega field
	* src/main.cc: implement new -X (--pdi) option
	* doc/avarice.1: document the new option

2011-12-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to 2.12.rc1.

2011-12-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (dummyhandler): Put into #if defined(O_ASYNC),
	because it is only used in that case.

2011-12-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h (statusAreaAddress, cpuRegisterAreaAddress): put
	the "const" qualifier into the correct place
	* src/jtag1.h: (Dito.)
	* src/jtag2.h: (Dito.)

2011-12-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2.h (BREAKPOINT2_XMEGA_UNAVAIL): new constant
	* src/jtag2bp.cc: Use BREAKPOINT2_XMEGA_UNAVAIL, rather than using
	a magic number; fill in BP info for CMND_SET_BREAK even though AVR
	Studio doesn't appear to use it (but it's consistent with the