@@ -390,7 +390,7 @@ void jtag1::deviceAutoConfig(void)
 
     device_name = (char*)pDevice->name;
 
-    global_p_device_def = pDevice;
+    deviceDef = pDevice;
 
     setDeviceDescriptor(pDevice);
 }
